--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "super": "supervisor --harmony app"
   },
   "dependencies": {
+    "connect-session-sequelize": "^5.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "gm": "^1.23.1",
     "http-errors": "~1.6.2",
